--- a/resume/resume.html
+++ b/resume/resume.html
@@ -17,7 +17,21 @@
 <h3>Education</h3>
 <li>B.Tech in Computer Science,juntk,2026</li>
 <li>Intermediate,star junior college 2020</li>
-<li>High School,Bhashyam S</li>
-
+<li>High School,Bhashyam School</li>
+<h3>Internship Experience</h3>
+<h4>Java full stack-smart bridge</h4>
+<p>may 2025-july2025</p>
+<h3>Skills</h3>
+<li>HTML</li>
+<li>css</li>
+<li>JavaScript</li>
+<li>Python</li>
+<li>Communication</li>
+<h3>Projectts</h3>
+<h4>community service project</h4>
+<p>This project very helpful to communicate to people and create awareness to the society</p>
+<h3>Certifications/Achievements</h3>
+<li>Certified in Python</li>
+<li>certified by Vikshith Bhararth</li>
 </body>
 </html>
